@@ -1079,9 +1079,9 @@ namespace libtorrent
 			return;
 		}
 
-		if (t->is_paused() && (!t->is_auto_managed()
-			|| !m_ses.m_settings.incoming_starts_queued_torrents
-			|| t->has_error()))
+		if ((!t->allows_peers() && (!t->is_auto_managed()
+				|| !m_ses.m_settings.incoming_starts_queued_torrents))
+			|| t->has_error())
 		{
 			// paused torrents will not accept
 			// incoming connections unless they are auto managed
